Add image to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <p>Hello World!</p>
+
+<img src="https://ssl.cdn-redfin.com/photo/191/mbmobile/342/genMbmob.B1189342_2.jpg" alt="Description of image">
