--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wildvine - Give Love for Saving World Animals</title>
+  <title>Vital Earth Network</title>
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
 
   <!-- 
     - favicon
@@ -37,16 +39,8 @@
     <div class="container">
 
       <h1>
-        <a href="#" class="logo">Wildvine</a>
+        <a href="#" class="logo">Vital Earth Network</a>
       </h1>
-
-      <select name="language" class="lang-switch">
-
-        <option value="english">English</option>
-        <option value="french">French</option>
-        <option value="spanish">Spanish</option>
-
-      </select>
 
       <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
         <ion-icon name="menu-outline"></ion-icon>
@@ -58,7 +52,7 @@
           <ion-icon name="close-outline"></ion-icon>
         </button>
 
-        <a href="#" class="logo">Wildvine</a>
+        <a href="#" class="logo">Vital Earth Network</a>
 
         <ul class="navbar-list">
 
@@ -115,16 +109,20 @@
       </nav>
 
       <div class="header-action">
+<div class="social-icons">
+<a href="https://www.tiktok.com/@vitalearthnetwork" target="_blank" rel="noopener noreferrer">
+      <ion-icon name="logo-tiktok" size="large" color="light" padding="0px"></ion-icon>
+      </a>
 
-        <button class="search-btn" aria-label="Search">
-          <ion-icon name="search-outline"></ion-icon>
-        </button>
+      <a href="https://www.instagram.com/vitalearthnetwork/" target="_blank" rel="noopener noreferrer">
+      <ion-icon name="logo-instagram" size="large" color="light"></ion-icon>
+      </a>
 
-        <button class="btn btn-primary">
-          <span>Donation</span>
-
-          <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
-        </button>
+      <a href="https://fundraise.worldwildlife.org/p2p/site/NZSo9/page/17SoNj#/" target="_blank" rel="noopener noreferrer"
+   class="btn btn-primary">
+  <span>Donate</span>
+  <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
+</a>
 
       </div>
 
@@ -148,21 +146,20 @@
           <p class="section-subtitle">
             <img src="./assets/images/subtitle-img-white.png" width="32" height="7" alt="Wavy line">
 
-            <span>Welcome to Wildvine</span>
+            <span>Welcome to Vital Earth Network</span>
           </p>
 
           <h2 class="h1 hero-title">
-            Give Love for Saving <strong>World Animals</strong>
+            Helping Protect The<strong>Environment</strong>
           </h2>
 
           <p class="hero-text">
-            Sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-            suspendisse
-            ultrices gravida.
+            Vital Earth Network is a student born initiative focused on contributing to various environmental charities and organizing volunteer activities.
           </p>
 
+          
           <button class="btn btn-primary">
-            <span>Donation</span>
+            <span>Donate</span>
 
             <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
           </button>
@@ -189,56 +186,23 @@
               </div>
 
               <div>
-                <h3 class="h4 item-title">Safe Shelter</h3>
+                <h3 class="h4 item-title">Support Animals</h3>
 
                 <p class="item-text">
-                  Sit amet consecte adiscine
-                  eiusm temor ultrices.
+                  Our initiative focuses on lending aid to endangered species and supporting endangered ecoystems.
                 </p>
               </div>
             </li>
 
             <li class="features-item">
               <div class="item-icon">
-                <ion-icon name="water-outline"></ion-icon>
+                <ion-icon name="people-outline"></ion-icon>
               </div>
 
               <div>
-                <h3 class="h4 item-title">Safe Water</h3>
-
+                <h3 class="h4 item-title">Volunteering</h3>
                 <p class="item-text">
-                  Sit amet consecte adiscine
-                  eiusm temor ultrices.
-                </p>
-              </div>
-            </li>
-
-            <li class="features-item">
-              <div class="item-icon">
-                <ion-icon name="leaf-outline"></ion-icon>
-              </div>
-
-              <div>
-                <h3 class="h4 item-title">Ecology Save</h3>
-
-                <p class="item-text">
-                  Sit amet consecte adiscine
-                  eiusm temor ultrices.
-                </p>
-              </div>
-            </li>
-
-            <li class="features-item">
-              <div class="item-icon">
-                <ion-icon name="snow-outline"></ion-icon>
-              </div>
-
-              <div>
-                <h3 class="h4 item-title">Environment</h3>
-
-                <p class="item-text">
-                  Sit amet consecte adiscine
-                  eiusm temor ultrices.
+                  Our initiative focuses on organizing volunteer opportunities centered around benefitting the community.
                 </p>
               </div>
             </li>
@@ -292,36 +256,33 @@
             <p class="section-subtitle">
               <img src="./assets/images/subtitle-img-green.png" width="32" height="7" alt="Wavy line">
 
-              <span>Why Choose Us</span>
+              <span>Why Support Us</span>
             </p>
 
             <h2 class="h2 section-title">
-              Rise Your Hand to Save <strong>World Animals Life</strong>
+              Take Action In Saving Our<strong>Environment</strong>
             </h2>
 
             <ul class="tab-nav">
+  <li><button class="tab-btn active" data-tab="goal">Our Goal</button></li>
+  <li><button class="tab-btn" data-tab="current">Current Project</button></li>
+  <li><button class="tab-btn" data-tab="next">Next Project</button></li>
+</ul>
 
-              <li>
-                <button class="tab-btn active">Our Mission</button>
-              </li>
+<div class="tab-content">
+  <p class="section-text tab-section" id="goal">
+    Our initiative aims to benefit a multitude of charities individually, starting with our first project and working toward a fundraising goal, after which we can then move on to the next project.
+  </p>
 
-              <li>
-                <button class="tab-btn">Our Vision</button>
-              </li>
+  <p class="section-text tab-section" id="current" style="display:none;">
+    Our current project
+  </p>
 
-              <li>
-                <button class="tab-btn">Next Plan</button>
-              </li>
+  <p class="section-text tab-section" id="next" style="display:none;">
+    This is the next project description.
+  </p>
+</div>
 
-            </ul>
-
-            <div class="tab-content">
-
-              <p class="section-text">
-                But I must explain to you how all this mistaken denouncing pleasure and praising pain was born and I
-                will give you a
-                complete account of the system expoundmaster
-              </p>
 
               <ul class="tab-list">
 
@@ -330,7 +291,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                   </div>
 
-                  <p class="tab-text">Charity For Foods</p>
+                  <p class="tab-text">World Wildlife Charity</p>
                 </li>
 
                 <li class="tab-item">
@@ -338,29 +299,14 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                   </div>
 
-                  <p class="tab-text">Charity For Education</p>
+                  <p class="tab-text">The Ocean Cleanup Charity</p>
                 </li>
 
-                <li class="tab-item">
-                  <div class="item-icon">
-                    <ion-icon name="checkmark-circle"></ion-icon>
-                  </div>
-
-                  <p class="tab-text">Charity For Water</p>
-                </li>
-
-                <li class="tab-item">
-                  <div class="item-icon">
-                    <ion-icon name="checkmark-circle"></ion-icon>
-                  </div>
-
-                  <p class="tab-text">Charity For Medical</p>
-                </li>
 
               </ul>
 
               <button class="btn btn-secondary">
-                <span>Learn More Us</span>
+                <span>Learn More</span>
 
                 <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
               </button>
@@ -384,12 +330,12 @@
         <div class="container">
 
           <div class="cta-content">
-            <h2 class="h2 section-title">324+ Trusted Global Partners</h2>
+            <h2 class="h2 section-title">2 Trusted Global Charities</h2>
 
             <button class="btn btn-outline">
-              <span>Become a Partner</span>
+              <span>See List of Charities</span>
 
-              <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
+              <ion-icon name="card-outline" aria-hidden="true"></ion-icon>
             </button>
           </div>
 
@@ -583,7 +529,7 @@
                   </div>
 
                   <button class="btn btn-secondary">
-                    <span>Donation</span>
+                    <span>Donate</span>
 
                     <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
                   </button>
@@ -642,7 +588,7 @@
                   </div>
 
                   <button class="btn btn-secondary">
-                    <span>Donation</span>
+                    <span>Donate</span>
 
                     <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
                   </button>
@@ -701,7 +647,7 @@
                   </div>
 
                   <button class="btn btn-secondary">
-                    <span>Donation</span>
+                    <span>Donate</span>
 
                     <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
                   </button>
@@ -760,7 +706,7 @@
                   </div>
 
                   <button class="btn btn-secondary">
-                    <span>Donation</span>
+                    <span>Donate</span>
 
                     <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
                   </button>
@@ -1099,7 +1045,7 @@
       </ul>
 
       <p class="copyright">
-        Copyright 2022 <a href="#" class="copyright-link">codewithsadee</a>. All Rights Reserved.
+        Copyright 2026 <a href="#" class="copyright-link">Vital Earth Network</a>. All Rights Reserved.
       </p>
 
     </div>
