--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
   </p>
 
   <p class="section-text tab-section" id="current" style="display:none;">
-    Our current project info
+    Our current project focuses on ensuring wildlife safety across the globe. <a href="https://www.worldwildlife.org/about/" style="text-decoration: underline; color: #2a8be6">See more</a>
   </p>
 
   <p class="section-text tab-section" id="next" style="display:none;">
@@ -368,7 +368,7 @@
           </p>
 
           <h2 class="h2 section-title">
-            We Work Differently to <strong>keep The World Preserved</strong>
+            We Work Differently To <strong>Keep The World Preserved</strong>
           </h2>
 
           <ul class="service-list">
@@ -380,7 +380,7 @@
                   <ion-icon name="leaf-outline"></ion-icon>
                 </div>
 
-                <h3 class="h3 card-title">Funraise</h3>
+                <h3 class="h3 card-title">Fundraise</h3>
 
                 <p class="card-text">
                   Our many projects helps us to fundraise for many different charities that help preserve our enviorment.
@@ -398,10 +398,10 @@
                   <ion-icon name="earth-outline"></ion-icon>
                 </div>
 
-                <h3 class="h3 card-title">Volenteer</h3>
+                <h3 class="h3 card-title">Volunteer</h3>
 
                 <p class="card-text">
-                  Our many volenteering opportunities help our community, the people in it, and the initiative.
+                  Our many volunteering opportunities help our community, the people in it, and the initiative.
                 </p>
 
                 
@@ -419,7 +419,7 @@
                 <h3 class="h3 card-title">Spread Awareness</h3>
 
                 <p class="card-text">
-                  Our many social medias and event help spread how serious of an issue this is. This issue needs promotion.
+                  Our social media presence as well as our volunteer work allow us to shed light on our cause.
                 </p>
 
                 
@@ -512,11 +512,12 @@
 
                   </div>
 
-                  <button class="btn btn-secondary">
-                    <span>Donate</span>
-
-                    <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
-                  </button>
+                  <a href="https://fundraise.worldwildlife.org/p2p/site/NZSo9/page/17SoNj#/" 
+   target="_blank" rel="noopener noreferrer"
+   class="btn btn-secondary" style="display: inline-flex; align-items: center; width: auto; padding: 1.2rem 3.2rem;">
+  <span>Donate</span>
+  <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
+</a>
 
                 </div>
 
