--- a/index.html
+++ b/index.html
@@ -806,6 +806,7 @@
   </main>
 
 
+<div class="footer-separator"></div>
 
 
 
@@ -813,27 +814,51 @@
     - #FOOTER
   -->
 
-  <footer class="footer">
-    <div class="container">
+ <footer class="site-footer">
+  <div class="footer-inner">
 
-      <ul class="footer-list">
-
-        <li>
-          <a href="#" class="footer-link">Terms of use</a>
-        </li>
-
-        <li>
-          <a href="#" class="footer-link">Privacy & Policy</a>
-        </li>
-
-      </ul>
-
-      <p class="copyright">
-        Copyright 2026 <a href="#" class="copyright-link">Vital Earth Network</a>. All Rights Reserved.
+    <!-- LEFT -->
+    <div class="footer-brand">
+      <h2 class="footer-logo">Vital Earth Network</h2>
+      <p>
+        Empowering communities through environmental action,
+        sustainability initiatives, and global impact.
       </p>
 
+      <div class="footer-socials">
+        <a href="#"><ion-icon name="logo-tiktok"></ion-icon></a>
+        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+      </div>
+
+      <button class="back-to-top">↑ Back to top</button>
     </div>
-  </footer>
+
+    <!-- CENTER -->
+    <div class="footer-links">
+      <h4>Site Map</h4>
+      <a href="#">Homepage</a>
+      <a href="#">About</a>
+      <a href="#">Projects</a>
+      <a href="#">Resources & News</a>
+      <a href="#">Careers</a>
+      <a href="#">Contact Us</a>
+    </div>
+
+    <!-- RIGHT -->
+    <div class="footer-links">
+      <h4>Legal</h4>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms of Service</a>
+      <a href="#">Legal Notice</a>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    © 2026 Vital Earth Network. All Rights Reserved.
+  </div>
+</footer>
+
 
 
 
