--- a/index.html
+++ b/index.html
@@ -839,8 +839,8 @@
       <a href="#">Homepage</a>
       <a href="#">About</a>
       <a href="#">Projects</a>
-      <a href="#">Resources & News</a>
-      <a href="#">Careers</a>
+      <a href="#">Stuff</a>
+      <a href="#">Stuff</a>
       <a href="#">Contact Us</a>
     </div>
 
