--- a/index.html
+++ b/index.html
@@ -836,12 +836,11 @@
     <!-- CENTER -->
     <div class="footer-links">
       <h4>Site Map</h4>
-      <a href="#">Homepage</a>
-      <a href="#">About</a>
-      <a href="#">Projects</a>
-      <a href="#">Stuff</a>
-      <a href="#">Stuff</a>
-      <a href="#">Contact Us</a>
+      <a href="#home">Homepage</a>
+      <a href="#about">About</a>
+      <a href="#service">Service</a>
+      <a href="#donate">Donate</a>
+      <a href="#event">Event</a>
     </div>
 
     <!-- RIGHT -->
