footer and progress donation bar

--- a/index.html
+++ b/index.html
@@ -478,10 +478,10 @@
                     <p class="progress-text">
                       <span>Raised</span>
 
-                      <data value="0">$0</data>
+                      <data value="70">$70</data>
                     </p>
 
-                    <data class="progress-value" value="0">0%</data>
+                    <data class="progress-value" value="0">7%</data>
                   </div>
 
                   <div class="progress-box">
@@ -501,13 +501,13 @@
                     <p class="card-wrapper-text">
                       <span>Raised</span>
 
-                      <data class="yellow" value="0">$0</data>
+                      <data class="yellow" value="70">$70</data>
                     </p>
 
                     <p class="card-wrapper-text">
                       <span>To Go</span>
 
-                      <data class="cyan" value="1000">$1000</data>
+                      <data class="cyan" value="930">$930</data>
                     </p>
 
                   </div>
@@ -820,14 +820,10 @@
     <!-- LEFT -->
     <div class="footer-brand">
       <h2 class="footer-logo">Vital Earth Network</h2>
-      <p>
-        Empowering communities through environmental action,
-        sustainability initiatives, and global impact.
-      </p>
 
       <div class="footer-socials">
-        <a href="#"><ion-icon name="logo-tiktok"></ion-icon></a>
-        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+        <a href="https://www.tiktok.com/@vitalearthnetwork" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-tiktok"></ion-icon></a>
+        <a href="https://www.instagram.com/vitalearthnetwork/" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-instagram"></ion-icon></a>
       </div>
 
       <button class="back-to-top">↑ Back to top</button>
@@ -835,12 +831,10 @@
 
     <!-- CENTER -->
     <div class="footer-links">
-      <h4>Site Map</h4>
-      <a href="#home">Homepage</a>
-      <a href="#about">About</a>
-      <a href="#service">Service</a>
-      <a href="#donate">Donate</a>
-      <a href="#event">Event</a>
+      <a><strong>Message or Email us at</strong></a>
+      <a href="mailto:vitalearthnetwork@gmail.com">vitalearthnetwork@gmail.com</a>
+       <a href="sms:+17162497659">+1 (716) 249-7650</a>
+    
     </div>
 
     <!-- RIGHT -->
