--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
 
     <!-- CENTER -->
     <div class="footer-links">
-      <a><strong>Message or Email us at</strong></a>
+      <strong>Message or Email us at</strong><a></a>
       <a href="mailto:vitalearthnetwork@gmail.com">vitalearthnetwork@gmail.com</a>
        <a href="sms:+17162497659">+1 (716) 249-7650</a>
     
