back to top button fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vital Earth Network</title>
 <link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 
   <!-- 
     - favicon
@@ -828,6 +828,9 @@
 
       <button class="back-to-top">↑ Back to top</button>
     </div>
+
+
+
 
     <!-- CENTER -->
     <div class="footer-links">
