--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
   <!-- 
     - custom css link
