--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
     <!-- RIGHT -->
     <div class="footer-links">
       <h4>Legal</h4>
-      <a href="#">Privacy Policy</a>
+      <a href="/privacy-policy.html">Privacy Policy</a>
       <a href="#">Terms of Service</a>
       <a href="#">Legal Notice</a>
     </div>
