--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vital Earth Network</title>
 <link rel="stylesheet" href="style.css">
- <link rel="stylesheet" href="./assets/css/privacy.css">
+<link rel="stylesheet" href="./assets/css/contact.css">
 <script src="script.js" defer></script>
+<script src="contact.js" defer></script>
 
   <!-- 
     - favicon
@@ -131,12 +132,24 @@
   </header>
 
 
-<form action="https://formspree.io/f/mlgggbzj" method="POST">
+<section class="contact-section">
+  <div class="container">
+
+    <h2>Contact Us</h2>
+    <p>Have a question or want to get involved? Send us a message.</p>
+
+    <form id="contactForm">
   <input type="text" name="name" placeholder="Your Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
   <textarea name="message" placeholder="Your Message" required></textarea>
   <button type="submit">Send</button>
 </form>
+
+<p id="formStatus"></p>
+
+
+  </div>
+</section>
 
 
   <div class="footer-separator"></div>
