--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </p>
 
           <h2 class="h1 hero-title">
-            Helping Protect The<strong>Environment</strong>
+            <strong>Helping Protect The Environment</strong>
           </h2>
 
           <p class="hero-text">
