--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
     <p>Have a question or want to get involved? Send us a message.</p>
 
     <form id="contactForm">
-  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="text" name="name" placeholder="Yffour Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
   <textarea name="message" placeholder="Your Message" required></textarea>
   <button type="submit">Send</button>
