--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
 
     <form id="contactForm">
   <input type="text" name="name" placeholder="Yffour Name" required>
-  <input type="email" name="email" placeholder="Your Email" required>
+  <input type="email" name="email" placeholder="gggYour Email" required>
   <textarea name="message" placeholder="Your Message" required></textarea>
   <button type="submit">Send</button>
 </form>
