--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
 
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_subject" value="New message from Vital Earth Network">
-  <input type="hidden" name="_next" value="thank-you.html">
+  <input type="hidden" name="_next" value="https://vitalearthnetwork.org/thank-you">
 
   <input type="text" name="name" placeholder="Your Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
