--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
 
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_subject" value="New message from Vital Earth Network">
-  <input type="hidden" name="_next" value="https://vitalearthnetwork.org/thank-you">
+  <input type="hidden" name="_next" value="http://127.0.0.1:5500/thank-you.html">
 
   <input type="text" name="name" placeholder="Your Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
@@ -155,6 +155,17 @@
   </button>
 
 </form>
+
+<script>
+  const form = document.querySelector(".contact-form");
+
+  form.addEventListener("submit", () => {
+    localStorage.setItem("contact_name", form.name.value);
+    localStorage.setItem("contact_email", form.email.value);
+    localStorage.setItem("contact_message", form.message.value);
+  });
+</script>
+
 
 
   </div>
