--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
 
       <h1>
-        <a href="#" class="logo">Vital Earth Network</a>
+        <a href="index.html" class="logo">Vital Earth Network</a>
       </h1>
 
       <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
@@ -54,7 +54,7 @@
           <ion-icon name="close-outline"></ion-icon>
         </button>
 
-        <a href="#" class="logo">Vital Earth Network</a>
+        <a href="index.html" class="logo">Vital Earth Network</a>
 
         <ul class="navbar-list">
 
@@ -288,12 +288,18 @@ document.addEventListener("keydown", (e) => {
               </div>
             </li>
 
+          <li class="features-item progress-item">
+
+        
+          </li>
+
+
           </ul>
+
+          
 
         </div>
       </section>
-
-
 
 
 
@@ -547,11 +553,11 @@ document.addEventListener("keydown", (e) => {
 
 
       <!--
-              ---ENTER THE MONEY RAISED AND GOAL HERE---
+              ---ENTER THE GOAL HERE---
       -->      
-  <div class="donate-card" data-raised="121.5" data-goal="1000">
+  <div class="donate-card" data-goal="1000">
     <!--
-              ---ENTER THE MONEY RAISED AND GOAL HERE---
+              ---ENTER THE GOAL HERE---
       -->    
 
 
@@ -928,9 +934,9 @@ document.addEventListener("keydown", (e) => {
     <!-- RIGHT -->
     <div class="footer-links">
       <h4>Legal</h4>
-      <a href="privacy-policy.html">Privacy Policy</a>
-      <a href="terms-of-service.html">Terms of Service</a>
-      <a href="#">Legal Notice</a>
+      <a href="privacy-policy">Privacy Policy</a>
+      <a href="terms-of-service">Terms of Service</a>
+      <a href="return-policy">Return Policy</a>
     </div>
 
   </div>
