--- a/return-policy.html
+++ b/return-policy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vital Earth Network | Privacy Policy</title>
+    <title>Vital Earth Network | Return Policy</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,8 @@
         <title>Vital Earth Network</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="./assets/css/policy.css">
-        <script src="script.js" defer></script>
         <link rel="stylesheet" href="./assets/css/contact.css">
+        <script src="script.js" defer></script>
 
         <!-- 
     - favicon
@@ -137,6 +137,7 @@
     </div>
   </header>
 
+
 <div id="contactOverlay" class="modal-overlay">
   <div class="modal-box">
     <button class="modal-close" aria-label="Close">&times;</button>
@@ -217,122 +218,70 @@ document.addEventListener("keydown", (e) => {
 
 
 
-
 <body class="tos-page">
 
     <div class="privacy-container">
-  <p class="legal-notice">Legal Notice</p>
-  <p class="name">Vital Earth Network</p>
+        <p class="legal-notice">Legal Notice</p>
+        <p class="name">Vital Earth Network</p>
 
-  <h1 class="privacy-title">Privacy Policy</h1>
-  <p class="privacy-updated">Last Updated: January 19, 2026</p>
+        <h1 class="privacy-title">Return Policy</h1>
+        <p class="privacy-updated">Last Updated: January 20, 2026</p>
 
-  <p class="privacy-note">
-    This Privacy Notice explains how Vital Earth Network collects, uses, and protects your personal information.
-  </p>
-
-  <div class="privacy-content">
-
-    <h3>1. Introduction</h3>
-    <p>
-      This Privacy Notice for Vital Earth Network ("we," "us," or "our") describes how and why we might access,
-      collect, store, use, and/or share ("process") your personal information when you use our services ("Services"),
-      including when you:
-    </p>
-
-    <ul>
-      <li>Visit our website at <a href="https://www.vitalearthnetwork.org"><strong>https://www.vitalearthnetwork.org</strong></a></li>
-      <li>Engage with us in other related ways, including any marketing or events</li>
-    </ul>
-
-    <p>
-      If you do not agree with our policies and practices, please do not use our Services. 
-      For questions, contact us at <a href="mailto:vitalearthnetwork@gmail.com"><strong>vitalearthnetwork@gmail.com</strong></a>.
-    </p>
-
-    <h3>2. How We Process Your Information</h3>
-    <p>
-        We process the personal information you provide in order to:
-    </p>
-    <ul>
-    <li>Respond to inquiries and provide support</li>
-    <li>Manage donations, volunteer sign-ups, and transactions</li>
-    <li>Analyze usage trends and improve our Services</li>
-    <li>Comply with legal obligations and maintain security</li>
-    </ul>
-    <p>
-        We do not sell, trade, or rent your personal information.
-    </p>
-
-    <h3>3. Information We Collect</h3>
-    <p><strong>Personal information you disclose:</strong></p>
-    <ul>
-        <li>Names</li>
-        <li>Email addresses</li>
-        <li>Phone numbers</li>
-        <li>Contact preferences</li>
-        <li>Payment data (handled directly by the World Wildlife Fund – see <a href="https://www.worldwildlife.org/legal-notices/privacy-policy/"><strong>WWF Privacy</strong></a>)</li>
-    </ul>
-
-    <p style="margin-top: 35px;"><i></i><strong>Information automatically collected</strong></p>
-    <p>
-      We automatically collect information such as IP address, browser type, device information,
-      operating system, and usage data to maintain security and site functionality.
-    </p>
-
-    <h3>4. Cookies and Tracking Technologies</h3>
-    <p>
-        We do not use Google Analytics or other third-party tracking scripts. However, our website is hosted via
-        GitHub Pages and served through Cloudflare. Cloudflare may use minimal technical cookies for security and caching 
-        purposes (e.g., to protect against bots or DDoS attacks). These cookies do not track personal activity for marketing purposes. 
-    </p>
-    <p>
-        No additional tracking or profiling occurs. By using the site, you consent to these functional cookies necessary for site operation.
-    </p>
-
-    <h3>5. Donations and Payments</h3>
-    <p>
-        Any donations made through our site are processed through third-party platforms respective to our project like the World Wildlife Fund. Vital Earth Network does not store
-        or handle payment information directly. Please review the respective platform’s privacy and security policies. For donation refunds, see our <a href="refund-policy.html"><strong>Refund Policy</strong></a>.
-    </p>
-
-    <h3>6. Retention of Information</h3>
-    <p>
-        We keep your personal information only as long as necessary to fulfill the purposes outlined in this Privacy Notice, unless retention is required by law. When information is no longer needed, 
-        it will be securely deleted or anonymized.
-    </p>
-
-    <h3><strong>7. Security of Your Information</strong></h3>
-    <p>
-        We use reasonable organizational, technical, and administrative measures to protect your information. However, no system is 100% secure. Transmission of information over the internet is at your own risk.
-    </p>
-
-    <h3>8. Children / Age Restrictions</h3>
-    <p>
-        We do not knowingly collect personal information from children under 13. If information from a child under 13 is discovered, it will be deleted. For teen volunteers (ages 13–17), parental or guardian consent is required prior to participation in volunteer activities.
+        <p class="privacy-note">
+            Vital Earth Network is an early-stage environmental initiative and is not currently a registered nonprofit organization. Donations are made voluntarily and are not tax-deductible unless otherwise stated.
         </p>
 
-    <h3>9. Your Privacy Rights</h3>
-    <p>
-        Depending on your location, you may have rights to access, correct, delete, or limit the processing of your personal information. Contact us at <a href="mailto:vitalearthnetwork@gmail.com"><strong>vitalearthnetwork@gmail.com</strong></a> to exercise these rights.
-    </p>
+        <div class="privacy-content">
 
-    <h3>10. Updates to This Policy</h3>
-    <p>
-        We may update this Privacy Notice periodically. Updated versions will be indicated by
-        a revised date at the top of the page.
-    </p>
+            <h3>1. Donations</h3>
+            <p>
+                All donations made to Vital Earth Network are voluntary and non-refundable. By submitting a donation, you acknowledge and agree that the donation is final.
 
-    <h3><strong>11. Contact Us</strong></h3>
-    <p>
-        Vital Earth Network<br>
-        Buffalo, NY, United States<br>
-        Email: <a href="mailto:vitalearthnetwork@gmail.com"><strong>vitalearthnetwork@gmail.com</strong></a>
-    </p>
+            </p>
 
-  </div>
-</div>
+            <p>
+                Because donations are used to support environmental initiatives, community projects, and operational expenses, we are unable to issue refunds once a donation has been processed.
+            </p>
 
+            <h3>2. Third-Party Payment Platforms</h3>
+            <p>
+                Vital Earth Network does not process or store payment information directly. All donations are handled through third-party fundraising or payment platforms (such as WWF or other external services).
+            </p>
+            <p>
+                Refund requests related to:
+            </p>
+            <ul>
+                <li>Duplicate charges</li>
+                <li>Unauthorized transactions</li>
+                <li>Payment processing errors</li>
+            </ul>
+            <p>
+                must be directed to the payment platform used, and are subject to their refund and dispute policies.
+            </p>
+
+            <h3>3. Errors or Exceptional Circumstances</h3>
+            <p>
+                In rare cases of confirmed technical errors (such as duplicate donations caused by a system malfunction), we encourage you to contact us as soon as possible at <a href="mailto:vitalearthnetwork@gmail.com"><strong>vitalearthnetwork@gmail.com</strong></a>.
+                While refunds are not guaranteed, we will review each request on a case-by-case basis.
+            </p>
+
+            <h3>4. Tax Deductibility</h3>
+            <p>
+                Vital Earth Network does not guarantee that donations are tax-deductible. Donors are responsible for consulting a qualified tax professional regarding the deductibility of contributions.
+            </p>
+
+            <h3>5. Changes to This Policy</h3>
+            <p>
+                We reserve the right to update or modify this Refund Policy at any time. Changes will be effective immediately upon posting to this page, with the updated date noted above.
+            </p>
+
+            <h3>15. Contact Us</h3>
+            <p>
+                If you have any questions about this Return Policy, please contact us at <a href="mailto:vitalearthnetwork@gmail.com"><strong>vitalearthnetwork@gmail.com</strong></a>.
+            </p>
+
+        </div>
+    </div>
     <footer class="site-footer">
         <div class="footer-inner">
 
