updated for mobile

--- a/index.html
+++ b/index.html
@@ -922,6 +922,7 @@
 
 
       <!-- CENTER -->
+    <div class="footer-links-row">
       <div class="footer-links">
         <strong>Message or Email us at</strong><a></a>
         <a href="mailto:vitalearthnetwork@gmail.com">vitalearthnetwork@gmail.com</a>
@@ -936,8 +937,19 @@
         <a href="terms-of-service">Terms of Service</a>
         <a href="return-policy">Return Policy</a>
       </div>
+      </div>
 
     </div>
+
+      <div class="test5">
+        <div class="footer-socials2">
+          <a href="https://www.tiktok.com/@vitalearthnetwork" target="_blank" rel="noopener noreferrer"><ion-icon
+              name="logo-tiktok"></ion-icon></a>
+          <a href="https://www.instagram.com/vitalearthnetwork/" target="_blank" rel="noopener noreferrer"><ion-icon
+              name="logo-instagram"></ion-icon></a>
+          <h2 class="footer-logo2">Vital Earth Network</h2>
+        </div>
+      </div>
 
     <div class="footer-bottom">
       © 2026 Vital Earth Network. All Rights Reserved.
