--- a/index.html
+++ b/index.html
@@ -380,8 +380,7 @@
 
             </ul>
 
-            <a href="#charities" class="btn btn-outline"
-              style="display: inline-flex; align-items: center; width: auto; padding: 1.2rem 3.2rem; position: relative; top: -18px; left: -28px;">
+            <a href="#charities" class="btn btn-outline learn-charities-btn">
               <button class="btn btn-secondary">
                 <span>Learn About The Charities</span>
                 <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
@@ -610,6 +609,7 @@
             </li>
 
             <li>
+            <div class="nextone">
               <div class="donate-card">
 
                 <figure class="card-banner">
@@ -661,6 +661,7 @@
 
                 </div>
 
+              </div>
               </div>
             </li>
 
@@ -743,17 +744,7 @@
               class="color">
           </a>
 
-          <h3 style="
-  font-size: 2rem;
-  color: #2c2c2c;
-  font-weight: 300;
-  font-family: 'Oswald', sans-serif;
-  letter-spacing: 3px;
-   text-align: center;
-   margin-top: -3rem;
-
-  
-">
+          <h3 class="partner-text">
             The World Wildlife Fund (WWF) is dedicated to conserving nature and reducing the most pressing threats to
             the diversity of life on Earth.
           </h3>
