--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vital Earth Network</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=0.01">
   <script src="script.js" defer></script>
   <script src="donationprogress.js" defer></script>
 
@@ -235,13 +235,14 @@
           </p>
 
 
+        <div class="donate-slideup">
           <a href="https://fundraise.worldwildlife.org/p2p/site/NZSo9/page/17SoNj#/" target="_blank"
             rel="noopener noreferrer" class="btn btn-primary"
             style="display: inline-flex; align-items: center; width: auto; padding: 1.2rem 3.2rem;">
             <span>Donate</span>
             <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
           </a>
-
+        </div>
 
 
         </div>
@@ -885,6 +886,23 @@
 
 
   <div class="footer-separator"></div>
+
+
+<div class="mobile-donation-footer3">
+  <div class="progress-container3">
+    <div class="progress-bar3">
+      <div class="progress-fill3"></div>
+      <div class="progress-text3">$0 / $0</div>
+    </div>
+  </div>
+  <a href="https://fundraise.worldwildlife.org/p2p/site/NZSo9/page/17SoNj#/" 
+     target="_blank" rel="noopener noreferrer" class="donate-button">
+     Donate
+  </a>
+</div>
+
+
+
 
 
 
